[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://src/Tile.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Planet.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/asteroid.png" type="Texture" id=5]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sounds/game.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/asteroid_explode.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/new_wave.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/GreyBackground.jpg" type="Texture" id=10]
[ext_resource path="res://src/TowerManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/ScreenShake.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
margin_left = -154.0
margin_top = -72.0
margin_right = 1141.0
margin_bottom = 709.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" parent="." instance=ExtResource( 3 )]
position = Vector2( -96, 280 )
scale = Vector2( 10, 10 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 12 )]
position = Vector2( 0, 3.8147e-06 )

[node name="Tiles" type="GridContainer" parent="."]
margin_left = 192.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 528.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 48, 32 )

[node name="Tile2" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 144, 32 )

[node name="Tile3" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 240, 32 )

[node name="Tile4" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 336, 32 )

[node name="Tile5" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 432, 32 )

[node name="Tile6" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 528, 32 )

[node name="Tile7" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 624, 32 )

[node name="Tile8" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 720, 32 )

[node name="Tile9" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 48, 128 )

[node name="Tile10" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 144, 128 )

[node name="Tile11" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 240, 128 )

[node name="Tile12" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 336, 128 )

[node name="Tile13" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 432, 128 )

[node name="Tile14" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 528, 128 )

[node name="Tile15" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 624, 128 )

[node name="Tile16" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 720, 128 )

[node name="Tile17" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 48, 224 )

[node name="Tile18" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 144, 224 )

[node name="Tile19" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 240, 224 )

[node name="Tile20" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 336, 224 )

[node name="Tile21" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 432, 224 )

[node name="Tile22" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 528, 224 )

[node name="Tile23" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 624, 224 )

[node name="Tile24" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 720, 224 )

[node name="Tile25" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 48, 320 )

[node name="Tile26" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 144, 320 )

[node name="Tile27" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 240, 320 )

[node name="Tile28" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 336, 320 )

[node name="Tile29" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 432, 320 )

[node name="Tile30" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 528, 320 )

[node name="Tile31" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 624, 320 )

[node name="Tile32" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 720, 320 )

[node name="Tile33" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 48, 416 )

[node name="Tile34" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 144, 416 )

[node name="Tile35" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 240, 416 )

[node name="Tile36" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 336, 416 )

[node name="Tile37" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 432, 416 )

[node name="Tile38" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 528, 416 )

[node name="Tile39" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 624, 416 )

[node name="Tile40" parent="Tiles" instance=ExtResource( 2 )]
position = Vector2( 720, 416 )

[node name="BetweenWavesTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpawnerTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SpawnPoint1" type="Position2D" parent="."]
position = Vector2( 1024, 96 )

[node name="SpawnPoint2" type="Position2D" parent="."]
position = Vector2( 1024, 192 )

[node name="SpawnPoint3" type="Position2D" parent="."]
position = Vector2( 1024, 288 )

[node name="SpawnPoint4" type="Position2D" parent="."]
position = Vector2( 1024, 384 )

[node name="SpawnPoint5" type="Position2D" parent="."]
position = Vector2( 1024, 480 )

[node name="Asteroid" type="Sprite" parent="."]
position = Vector2( 1000, 22 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="AsteroidsLeft" type="Label" parent="."]
margin_left = 845.0
margin_top = 5.0
margin_right = 897.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="."]
margin_left = 520.0
margin_top = 5.0
margin_right = 632.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wave" type="Label" parent="."]
margin_left = 278.0
margin_top = 8.0
margin_right = 368.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseMoney" type="Timer" parent="."]
wait_time = 2.0

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="AsteroidExplodeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="NewWaveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0

[node name="StarPath" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="StarSpawnLocation" type="PathFollow2D" parent="StarPath"]

[node name="ShootingStarTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="PauseMenu" type="Popup" parent="."]
pause_mode = 2
visible = true
margin_left = 262.0
margin_top = 40.0
margin_right = 762.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenu"]
margin_left = 125.0
margin_top = 50.0
margin_right = 375.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 5 )
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="PauseMenu"]
margin_left = 175.0
margin_top = 200.0
margin_right = 325.0
margin_bottom = 230.0
custom_fonts/font = SubResource( 6 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="PauseMenu"]
margin_left = 175.0
margin_top = 275.0
margin_right = 325.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 6 )
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="PauseMenu"]
margin_left = 100.0
margin_top = 360.0
margin_right = 400.0
margin_bottom = 376.0
min_value = -50.0
max_value = 0.0
value = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXSlider" type="HSlider" parent="PauseMenu"]
margin_left = 100.0
margin_top = 420.0
margin_right = 400.0
margin_bottom = 436.0
min_value = -50.0
max_value = 0.0
value = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="PauseMenu"]
margin_left = 200.0
margin_top = 330.0
margin_right = 300.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 7 )
text = "Music"
align = 1

[node name="SFXLabel" type="Label" parent="PauseMenu"]
margin_left = 200.0
margin_top = 390.0
margin_right = 300.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 7 )
text = "SFX"
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 930.0
margin_top = 545.0
margin_right = 995.0
margin_bottom = 575.0
custom_fonts/font = SubResource( 8 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerManager" parent="." instance=ExtResource( 11 )]

[node name="ColorTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="paused" from="." to="." method="_on_Level_paused"]
[connection signal="area_entered" from="Planet" to="." method="_on_Planet_area_entered"]
[connection signal="timeout" from="BetweenWavesTimer" to="." method="_on_BetweenWavesTimer_timeout"]
[connection signal="timeout" from="SpawnerTimer" to="." method="_on_SpawnerTimer_timeout"]
[connection signal="timeout" from="IncreaseMoney" to="." method="_on_IncreaseMoney_timeout"]
[connection signal="timeout" from="ShootingStarTimer" to="." method="_on_ShootingStarTimer_timeout"]
[connection signal="button_down" from="PauseMenu/ResumeButton" to="." method="_on_ResumeButton_button_down"]
[connection signal="button_down" from="PauseMenu/MainMenuButton" to="." method="_on_MainMenuButton_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="timeout" from="ColorTimer" to="." method="_on_ColorTimer_timeout"]
